css/components/header.css
.header {
  width: 100%;

  position: fixed;
  top: 0;
  right: 0;

  background-color: #f6f5f0;

  border-bottom: 1px solid #c8c8c8;

  z-index: 10;
}

.header > .inner {
  height: 120px;
}

.header__logo {
  height: 75px;

  position: absolute;

  top: 0;
  bottom: 0;

  margin: auto;
}

.header__submenu {
  display: flex;

  position: absolute;

  top: 10px;
  right: 0;
}

.submenu__list {
  display: flex;

  font-family: Arial, sans-serif;
}

.submenu__item {
  position: relative;
}

.submenu__item::before {
  content: '';

  width: 1px;
  height: 12px;

  background-color: #e5e5e5;

  position: absolute;

  top: 0;
  bottom: 0;

  margin: auto;
}

.submenu__item:first-child::before {
  display: none;
}

.submenu__link {
  display: block;

  padding: 11px 16px;

  font-size: 12px;
  color: #656565;
}

.submenu__link:hover {
  color: #000;
}

.submenu__search {
  height: 34px;

  position: relative;
}

.search__input {
  width: 36px;
  height: 34px;

  background-color: #fff;

  padding: 4px 10px;

  border: 1px solid #ccc;
  border-radius: 5px;

  outline: none;

  font-size: 12px;
  color: #777;

  transition: width 0.4s;
}

.search__input:focus {
  width: 190px;

  border-color: #669900;
}

.search__material-icons {
  height: 24px;

  position: absolute;

  top: 0;
  bottom: 0;
  right: 5px;

  margin: auto;

  transition: 0.4s;
}

.submenu__search.focused .search__material-icons {
  opacity: 0;
}

.header__main-menu {
  position: absolute;

  bottom: 0;
  right: 0;
}

.main-menu__list {
  display: flex;
}

.item__name {
  padding: 10px 20px 34px 20px;

  font-family: Arial, sans-serif;
  font-size: 13px;
}

.main-menu__item:hover .item__name {
  background-color: #2c2a29;

  border-radius: 6px 6px 0 0;

  color: #669900;
}

.item__contents {
  display: none;

  width: 100%;

  position: fixed;

  left: 0;
}

.main-menu__item:hover .item__contents {
  display: block;
}

.contents__menu {
  background-color: #2c2a29;
}

.contents__menu > .inner {
  display: flex;

  padding: 20px 0;
}

.contents__section {
  width: 220px;
}

.contents__name {
  padding: 3px 0 12px 0;

  font-size: 14px;
  color: #fff;
}

.contents__item {
  padding: 5px 0;

  font-size: 12px;
  color: #999;

  cursor: pointer;
}

.contents__item:hover {
  color: #669900;
}

.contents__texture {
  background-image: url(../../images/main-menu-pattern.jpg);

  font-size: 12px;
}

.contents__texture > .inner {
  padding: 26px 0;
}

.texture__title {
  font-weight: 700;
  color: #999;
}

.texture__content {
  margin: 4px 0 14px;

  color: #669900;
}

.badge-container {
  position: absolute;

  top: 132px;
  right: 12px;
}

.badge {
  margin-bottom: 12px;

  border-radius: 10px;

  overflow: hidden;

  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.15);

  cursor: pointer;
}

